--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nhost/nhost-js": "^3.2.5",
     "@nhost/react": "^3.10.1",
     "clsx": "^2.1.0",
+    "axios": "^1.8.4",
     "date-fns": "^3.3.1",
     "framer-motion": "^12.4.11",
     "graphql": "^16.10.0",
